--- a/maps/templates/index.html
+++ b/maps/templates/index.html
@@ -146,7 +146,7 @@
 
     <script>
       window.CLOSURE_NO_DEPS = true;
-      window.CLOSURE_BASE_PATH = "."
+      window.CLOSURE_BASE_PATH = ".";
     </script>
 
     <script src="{% static "bower_components/closure-library/closure/goog/base.js" %}"></script>
