add map id in the popover

--- a/maps/templates/index.html
+++ b/maps/templates/index.html
@@ -95,7 +95,7 @@
         <div class="search_results">
           <div>
             {% verbatim %}
-            <article ng-repeat="map in search_results" class="result_article" data-toggle="popover" data-content="<strong>Format: </strong>{{map.format}}</br><strong>Size: </strong>{{map.size.name}}</br><strong>Category: </strong>{{map.category.name}}</br><strong>Source: </strong>{{map.source.name}}</br><strong>Country: </strong>{{map.country}}</br><strong>Theme: </strong>{{map.theme.name}}</br><strong>Scale: </strong>{{map.scale}}</br><strong>Description: </strong>{{map.description}}" data-title="<strong>Metadata</strong>">
+            <article ng-repeat="map in search_results" class="result_article" data-toggle="popover" data-content="<strong>ID: </strong>{{map.id}}</br><strong>Format: </strong>{{map.format}}</br><strong>Size: </strong>{{map.size.name}}</br><strong>Category: </strong>{{map.category.name}}</br><strong>Source: </strong>{{map.source.name}}</br><strong>Country: </strong>{{map.country}}</br><strong>Theme: </strong>{{map.theme.name}}</br><strong>Scale: </strong>{{map.scale}}</br><strong>Description: </strong>{{map.description}}" data-title="<strong>Metadata</strong>">
               <div class="item-header">
                 <a ng-href="maps/{{ map.id }}/download"><h4 ng-bind="map.title"></h4></a>
               </div>
