--- a/maps/templates/index.html
+++ b/maps/templates/index.html
@@ -58,7 +58,7 @@
         <div class="attribute-filters pull-left">
           <strong class="pull-left">Refine your query</strong>
           <div class="pull-left">
-            <label>By Title od Id</label>
+            <label>By Title or Id</label>
             <input ng-model="title" type="text" ng-controller="TitleSelectController" placeholder="Type to search"></input>
           </div>
           <div class="pull-left search_block">
