shorten the legend

--- a/maps/templates/index.html
+++ b/maps/templates/index.html
@@ -38,7 +38,7 @@
       
       <!-- Search-->
       <div class="search col-md-3 pull-left" id="search">
-        <h3>Query Filters</h3>
+        <h3>Compose your Filters</h3>
         <div class="spatial-filters pull-left">
           <strong class="pull-left">Search by country or by region</strong>
           <div>
