add clear all filters function

--- a/maps/templates/index.html
+++ b/maps/templates/index.html
@@ -39,6 +39,7 @@
       <!-- Search-->
       <div class="search col-md-3 pull-left" id="search">
         <h3>Compose your Filters</h3>
+        <a><p ng-click="reset_filters()">Clear all filters</p></a>
         <div class="spatial-filters pull-left">
           <strong class="pull-left">Search by country or by region</strong>
           <div>
@@ -59,7 +60,7 @@
           <strong class="pull-left">Refine your query</strong>
           <div class="pull-left">
             <label>By Title or Id</label>
-            <input ng-model="title" type="text" ng-controller="TitleSelectController" placeholder="Type to search"></input>
+            <input id="title_search" ng-model="title" type="text" ng-controller="TitleSelectController" placeholder="Type to search"></input>
           </div>
           <div class="pull-left search_block">
             <label>Categories</label>
