--- a/maps/templates/index.html
+++ b/maps/templates/index.html
@@ -32,10 +32,11 @@
 
     <div id="wrapper">
       <header class="col-md-12 header">
-        <h1 class="col-md-4">Global Atlas</h1>
-        <button class="btn-lg btn-primary col-md-3 col-md-offset-4 " data-toggle="modal" data-target="#mr_form">Request a map</button>
+        <h1 class="col-md-3">Global Atlas</h1>
+        <p class="marketing col-md-9">The Global Atlas on Crisis Areas is a catalogue of maps (format pdf, jpeg) at country or regional level, split in categories: baseline, natural hazard, armed conflict, security, thematic and policy.
+It's intended to increase the awareness of geographic and crisis related issues, to provide the basis for information management in possible crisis situations or planning project.</p>
       </header>
-      
+      <button class="btn btn-small btn-primary col-md-2 pull-right request-button" data-toggle="modal" data-target="#mr_form">Request a map</button>
       <!-- Search-->
       <div class="search col-md-3 pull-left" id="search">
         <h3>Compose your Filters</h3>
