--- a/maps/templates/index.html
+++ b/maps/templates/index.html
@@ -32,8 +32,9 @@
 
     <div id="wrapper">
       <header class="col-md-12 header">
+        <span class="banner col-md-2"></span>
         <h1 class="col-md-3">Global Atlas</h1>
-        <p class="marketing col-md-9">The Global Atlas on Crisis Areas is a catalogue of maps (format pdf, jpeg) at country or regional level, split in categories: baseline, natural hazard, armed conflict, security, thematic and policy.
+        <p class="marketing col-md-7">The Global Atlas on Crisis Areas is a catalogue of maps (format pdf, jpeg) at country or regional level, split in categories: baseline, natural hazard, armed conflict, security, thematic and policy.
 It's intended to increase the awareness of geographic and crisis related issues, to provide the basis for information management in possible crisis situations or planning project.</p>
       </header>
       <button class="btn btn-small btn-primary col-md-2 pull-right request-button" data-toggle="modal" data-target="#mr_form">Request a map</button>
