--- a/static/app/styles/main.css
+++ b/static/app/styles/main.css
@@ -161,7 +161,7 @@ h1 {
 }
 
 .results{
-  max-width: 300px;
+  width: 300px;
 }
 
 ul{
@@ -248,7 +248,7 @@ h3 {
 }
 
 .search_results{
-  max-height: 350px;
+  height: 350px;
   overflow: auto;
 }
 
@@ -277,7 +277,21 @@ h3 {
   margin-bottom: 20px;
   margin-right: 130px;
 }
+
 .banner{
   background: transparent url(/static/images/logo_en.gif) no-repeat scroll center top;
   height: 80px;
+}
+
+.collins{
+  padding: 0;
+  margin-top: -40px;
+  margin-left: 30px;
+  width: 440px;
+}
+
+.collins > article{
+  padding: 5px;
+  border-right: 1px solid #e5e5e5;
+  border-left: 1px solid #e5e5e5;
 }
