rename the send button

--- a/maps/templates/index.html
+++ b/maps/templates/index.html
@@ -128,7 +128,7 @@ It's intended to increase the awareness of geographic and crisis related issues,
                 {{ mr_form.as_p }}
                 <div class="form-actions">
                   <a class="btn" data-dismiss="modal">Close</a>
-                  <button type="submit" ng-disabled="!mr_form.$valid" class="btn btn-primary" ng-click="submit()">Save changes</button>
+                  <button type="submit" ng-disabled="!mr_form.$valid" class="btn btn-primary" ng-click="submit()">Send</button>
                 </div>           
             </form>
         </div>
