--- a/atlas/templates/login.html
+++ b/atlas/templates/login.html
@@ -1,4 +1,9 @@
 {% extends "admin/login.html" %}
+{% load staticfiles %}
+
+{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "styles/login.css" %}" />{% endblock %}
 
 {% block title %}JRC Global Atlas{% endblock %}
-{% block branding %}<h1 id="site-name">Welcome to The JRC Global Atlas</h1>{% endblock %}
+{% block branding %}
+<img src="{% static "images/logo_en.gif" %}"/>
+<h1 id="site-name">Welcome to The JRC Global Atlas</h1>{% endblock %}
