more list styling

--- a/maps/templates/index.html
+++ b/maps/templates/index.html
@@ -41,7 +41,7 @@ It's intended to increase the awareness of geographic and crisis related issues,
       <!-- Search-->
       <div class="search col-md-3 pull-left" id="search">
         <h3>Compose your Filters</h3>
-        <a><p ng-click="reset_filters()">Clear all filters</p></a>
+        <a href><p ng-click="reset_filters()">Clear all filters</p></a>
         <div class="spatial-filters pull-left">
           <strong class="pull-left">Search:</strong>
           <div>
