--- a/static/app/styles/main.css
+++ b/static/app/styles/main.css
@@ -161,6 +161,14 @@ h1 {
   font-size: 90%;
 }
 
+.search_filter > a >li.active{
+  background: #BBCBFF;
+}
+
+.search_filter > a >li:hover{
+  background: #C1DAFF;
+}
+
 .results{
   width: 300px;
 }
