shorten the padding in search

--- a/maps/templates/index.html
+++ b/maps/templates/index.html
@@ -43,7 +43,7 @@ It's intended to increase the awareness of geographic and crisis related issues,
         <h3>Compose your Filters</h3>
         <a href><p ng-click="reset_filters()">Clear all filters</p></a>
         <div class="spatial-filters pull-left">
-          <strong class="pull-left">Search:</strong>
+          <strong class="pull-left">Search</strong>
           <div>
             <label>By one or more Country</label>
             <div id="country_select" ui-select2="select2Options" ng-model="select2" placeholder="Type to search" ng-controller="CountrySelectController">
