--- a/static/app/styles/main.css
+++ b/static/app/styles/main.css
@@ -24,7 +24,7 @@ body {
   margin-top: 0;
 }
 
-.header > p{
+.header{
   color: white;
 }
 
@@ -37,12 +37,12 @@ body {
   padding-top: 15px;
   border-bottom: 1px solid #e5e5e5;
   background: #ffffff; /* Old browsers */
-background: -moz-linear-gradient(left,  #ffffff 17%, #000177 71%, #080066 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, right top, color-stop(17%,#ffffff), color-stop(71%,#000177), color-stop(100%,#080066)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(left,  #ffffff 17%,#000177 71%,#080066 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(left,  #ffffff 17%,#000177 71%,#080066 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(left,  #ffffff 17%,#000177 71%,#080066 100%); /* IE10+ */
-background: linear-gradient(to right,  #ffffff 17%,#000177 71%,#080066 100%); /* W3C */
+background: -moz-linear-gradient(left,  #ffffff 13%, #000972 38%, #080066 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, right top, color-stop(13%,#ffffff), color-stop(38%,#000972), color-stop(100%,#080066)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(left,  #ffffff 13%,#000972 38%,#080066 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(left,  #ffffff 13%,#000972 38%,#080066 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(left,  #ffffff 13%,#000972 38%,#080066 100%); /* IE10+ */
+background: linear-gradient(to right,  #ffffff 13%,#000972 38%,#080066 100%); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#080066',GradientType=1 ); /* IE6-9 */
 }
 /* Make the masthead heading the same height as the navigation */
@@ -247,11 +247,6 @@ h3 {
   font-size: 150%;
 }
 
-.pager{
-  margin: 10px 0 0 0;
-  width: 184px;
-}
-
 .search_results li{
   max-width: 260px
 }
@@ -282,9 +277,13 @@ h3 {
   margin: 0;
 }
 
+.pager{
+  margin: 0;
+}
+
 .request-button{
-  margin-bottom: 20px;
-  margin-right: 130px;
+  margin-bottom: 10px;
+  margin-right: 70px;
 }
 
 .banner{
