--- a/maps/templates/index.html
+++ b/maps/templates/index.html
@@ -19,6 +19,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="{% static "bower_components/bootstrap/dist/css/bootstrap.css" %}">
     <link rel="stylesheet" href="{% static "styles/flags.css" %}">
+    <link rel="stylesheet" href="{% static "fonts/lato_font.css" %}">
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
