--- a/static/app/styles/main.css
+++ b/static/app/styles/main.css
@@ -2,6 +2,7 @@
 body {
   padding-bottom: 20px;
   margin: 0;
+  font-family: 'Lato';
 }
 
 #wrapper { 
@@ -37,13 +38,13 @@ body {
   padding-top: 15px;
   border-bottom: 1px solid #e5e5e5;
   background: #ffffff; /* Old browsers */
-background: -moz-linear-gradient(left,  #ffffff 13%, #000972 38%, #080066 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, right top, color-stop(13%,#ffffff), color-stop(38%,#000972), color-stop(100%,#080066)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(left,  #ffffff 13%,#000972 38%,#080066 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(left,  #ffffff 13%,#000972 38%,#080066 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(left,  #ffffff 13%,#000972 38%,#080066 100%); /* IE10+ */
-background: linear-gradient(to right,  #ffffff 13%,#000972 38%,#080066 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#080066',GradientType=1 ); /* IE6-9 */
+  background: -moz-linear-gradient(left,  #ffffff 13%, #000972 38%, #080066 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, right top, color-stop(13%,#ffffff), color-stop(38%,#000972), color-stop(100%,#080066)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(left,  #ffffff 13%,#000972 38%,#080066 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(left,  #ffffff 13%,#000972 38%,#080066 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(left,  #ffffff 13%,#000972 38%,#080066 100%); /* IE10+ */
+  background: linear-gradient(to right,  #ffffff 13%,#000972 38%,#080066 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#080066',GradientType=1 ); /* IE6-9 */
 }
 /* Make the masthead heading the same height as the navigation */
 h1 {
@@ -51,6 +52,7 @@ h1 {
   margin-bottom: 0;
   line-height: 40px;
   padding-bottom: 19px;
+  font-family: 'Lato';
 }
 
 /* Custom page footer */
@@ -189,7 +191,6 @@ textarea{
 
 .map_info {
   padding: 6px 8px;
-  font: 14px/16px Arial, Helvetica, sans-serif;
   background: white;
   background: rgba(255,255,255,0.8);
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
@@ -219,7 +220,6 @@ textarea{
 
 .legend {
     padding: 6px 8px;
-    font: 14px/16px Arial, Helvetica, sans-serif;
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
     background: rgba(255,255,255, 0.9);
     line-height: 18px;
