absolute position for collins maps

--- a/maps/templates/index.html
+++ b/maps/templates/index.html
@@ -109,7 +109,7 @@ It's intended to increase the awareness of geographic and crisis related issues,
             </div>
           </div>
         </div>
-        <div class="collins pull-left" ng-controller="CollinsMapsController">
+        <div class="collins" ng-controller="CollinsMapsController">
           <h4>Collins maps found for the selected countries</h4>
           <p ng-show="!collins_maps.length">No maps</p>
           {% verbatim %}
