--- a/maps/templates/index.html
+++ b/maps/templates/index.html
@@ -43,7 +43,7 @@ It's intended to increase the awareness of geographic and crisis related issues,
         <!-- Search-->
         <div class="search col-md-3 pull-left" id="search">
           <h3>Compose your Filters</h3>
-          <a href><p ng-click="reset_filters()">Clear all filters</p></a>
+          <button class="btn btn-small btn-primary" ng-click="reset_filters()">Clear all filters</button>
           <div class="spatial-filters pull-left">
             <div>
               <label>Search by one or more Country</label>
@@ -109,7 +109,7 @@ It's intended to increase the awareness of geographic and crisis related issues,
             </div>
           </div>
         </div>
-        <div class="collins" ng-controller="CollinsMapsController">
+        <div class="collins pull-left" ng-controller="CollinsMapsController">
           <h4>Collins maps found for the selected countries</h4>
           <p ng-show="!collins_maps.length">No maps</p>
           {% verbatim %}
