--- a/maps/templates/index.html
+++ b/maps/templates/index.html
@@ -42,8 +42,8 @@ It's intended to increase the awareness of geographic and crisis related issues,
         <button class="btn btn-small btn-primary col-md-2 pull-right request-button" data-toggle="modal" data-target="#mr_form">Request a map</button>
         <!-- Search-->
         <div class="search col-md-3 pull-left" id="search">
+          <button class="btn btn-small btn-primary col-md-offset-2" ng-click="reset_filters()">Clear all filters</button>
           <h3>Compose your Filters</h3>
-          <button class="btn btn-small btn-primary" ng-click="reset_filters()">Clear all filters</button>
           <div class="spatial-filters pull-left">
             <div>
               <label>Search by one or more Country</label>
