--- a/static/app/fonts/lato_font.css
+++ b/static/app/fonts/lato_font.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'Lato';
+  font-family: 'Lato-bold';
   font-style: normal;
   font-weight: 700;
   src: local('Lato Bold'), local('Lato-Bold'), url(lato_bold.ttf) format('truetype');
