--- a/maps/templates/index.html
+++ b/maps/templates/index.html
@@ -34,9 +34,13 @@
     <div id="wrapper">
       <header class="col-md-12 header">
         <span class="banner col-md-2"></span>
-        <h1 class="col-md-3">Global Atlas</h1>
+        <h1 class="col-md-3">Global Crisis Atlas</h1>
         <p class="marketing col-md-7">The Global Atlas on Crisis Areas is a catalogue of maps (format pdf, jpeg) at country or regional level, split in categories: baseline, natural hazard, armed conflict, security, thematic and policy.
 It's intended to increase the awareness of geographic and crisis related issues, to provide the basis for information management in possible crisis situations or planning project.</p>
+        <div class="disclaimer pull-right">
+          <a href="http://ec.europa.eu/geninfo/legal_notices_en.htm">Disclaimer</a>
+          <a class="contacts" href="mailto:gemma@jrc.ec.europa.eu">Contact us</a>
+        </div>
       </header>
       <div id="content">
         <button class="btn btn-small btn-primary col-md-2 pull-right request-button" data-toggle="modal" data-target="#mr_form">Request a map</button>
@@ -59,7 +63,7 @@ It's intended to increase the awareness of geographic and crisis related issues,
               </ul>
             </div>
             <div class="pull-left">
-              <label>Refine by Title or Id</label>
+              <label>Refine by Title or Map Id</label>
               <input id="title_search" ng-model="title" type="text" ng-controller="TitleSelectController" placeholder="Type to search"></input>
             </div>
             <div class="pull-left search_block">
