add registration link

--- a/atlas/templates/login.html
+++ b/atlas/templates/login.html
@@ -6,4 +6,8 @@
 {% block title %}JRC Global Atlas{% endblock %}
 {% block branding %}
 <img src="{% static "images/logo_en.gif" %}"/>
-<h1 id="site-name">Welcome to The JRC Global Atlas</h1>{% endblock %}
+<h1 id="site-name">Welcome to The JRC Global Atlas</h1>
+{% endblock %}
+{% block footer %}
+<a class="reg" href="mailto:gemma@jrc.ec.europa.eu">Send us an email to obtain a login</a>
+{% endblock %}
