--- a/atlas/templates/login.html
+++ b/atlas/templates/login.html
@@ -3,11 +3,8 @@
 
 {% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "styles/login.css" %}" />{% endblock %}
 
-{% block title %}JRC Global Atlas{% endblock %}
+{% block title %}JRC Global Crisis Atlas{% endblock %}
 {% block branding %}
 <img src="{% static "images/logo_en.gif" %}"/>
 <h1 id="site-name">Welcome to The JRC Global Atlas</h1>
-{% endblock %}
-{% block footer %}
-<a class="reg" href="mailto:gemma@jrc.ec.europa.eu">Send us an email to obtain a login</a>
 {% endblock %}
