--- a/atlas/templates/login.html
+++ b/atlas/templates/login.html
@@ -6,5 +6,5 @@
 {% block title %}JRC Global Crisis Atlas{% endblock %}
 {% block branding %}
 <img src="{% static "images/logo_en.gif" %}"/>
-<h1 id="site-name">Welcome to The JRC Global Atlas</h1>
+<h1 id="site-name">Welcome to The JRC Global Crisis Atlas</h1>
 {% endblock %}
